--- a/formulario.css
+++ b/formulario.css
@@ -1,5 +1,5 @@
 .colorform {
-    background-color: pink;
+    background-color: rgba(221, 98, 119, 0.562);
     width: 70%;
     margin: 0 auto;
     height: 650px;
@@ -8,7 +8,7 @@
 
 .boton-div{
     margin: 0 auto;
-    background-color: pink;
+    background-color: rgba(221, 98, 119, 0.562);
     height: 70px;
     width: 70%;
     
